--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,6 @@
   "name": "sounds",
   "app_id": "",
   "v2": true,
-  "typescript": true
+  "typescript": true,
+  "defaultBrowser": "google-chrome"
 }
